shrinkwrap bugs

--- a/web/app/themes/sientra-theme/resources/assets/styles/common/_global.scss
+++ b/web/app/themes/sientra-theme/resources/assets/styles/common/_global.scss
@@ -589,3 +589,6 @@ ul.opus-list-dash {
     }
   }
 }
+.eol_si_shrink {
+  display: block;
+}
